<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="363dp"
        android:layout_height="361dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_height="105dp"
            app:srcCompat="@drawable/icon_app" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/hint_Username"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/account_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/hint_Password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <Button
                    android:id="@+id/btnSalir"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/btn_Salir" />

                <Button
                    android:id="@+id/btnAceptar"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:backgroundTint="#FF0C00"
                    android:textColor="#FFF"
                    android:layout_weight="1"
                    android:text="@string/btn_Aceptar" />

            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>